Fix printing selection-only from the GTK print dialog.
Categories
(Core :: Printing: Setup, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | verified |
| firefox84 | --- | verified |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
| Assignee | ||
Comment 1•5 years ago
|
||
I don't know when this broke, but we were not reading the gtk-specific
boolean even before https://hg.mozilla.org/mozilla-central/rev/c61a3b0cf79e350c400b48f6be97e08c1bfbe4aa
| Assignee | ||
Comment 2•5 years ago
|
||
I have no idea why or how, but this is the regression range mozregression came up with: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b6dc2f04666664338970daa11b766a181a701884&tochange=156ab3eba505488e7f30129525ec06f536beb8e9
| Assignee | ||
Comment 3•5 years ago
|
||
Comment on attachment 9185102 [details]
Bug 1674716 - Fix printing selection-only from the GTK print dialog. r=jfkthame
Beta/Release Uplift Approval Request
- User impact if declined: Printing selection from the old print ui or the system dialog doesn't work.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: select some text in some page on Linux, press Ctrl+P, click "Print with the system dialog" (if using the new print UI), click on the "Selection" checkbox, print to a file and make sure that only the selected text is printed.
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very simple patch of obsolete code removal.
- String changes made/needed: none
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
Jonathan made a convincing argument about this being regressed by bug 1668767.
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Comment 7•5 years ago
|
||
Set release status flags based on info from the regressing bug 1668767
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
Comment 9•5 years ago
|
||
Confirming the fix on Ubuntu 20.04 x64 using latest 84.0a1 Nightly.
Comment 10•5 years ago
|
||
Comment on attachment 9185102 [details]
Bug 1674716 - Fix printing selection-only from the GTK print dialog. r=jfkthame
83 regression, verified bu QA, uplift approved for 83 beta 8, thanks.
Comment 11•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Comment 12•5 years ago
•
|
||
Also confirming that this issue no longer reproduces on Ubuntu 20 using Firefox 84.0 beta 4 and Firefox 83.0.
Description
•