Bug 1674716 - Fix printing selection-only from the GTK print dialog. r=jfkthame, a=pascalc

I don't know when this broke, but we were not reading the gtk-specific
boolean even before https://hg.mozilla.org/mozilla-central/rev/c61a3b0cf79e350c400b48f6be97e08c1bfbe4aa

Differential Revision: https://phabricator.services.mozilla.com/D95488